# vwc

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml
docs/superpowers/specs/: 2026-04-16-volume-wheel-control-design.md
scripts/: capture_screenshots.py  launcher.py
src/volume_wheel_control/: __main__.py  app.py  bus.py
src/volume_wheel_control/actions/: base.py  hotkey.py  media.py  noop.py  registry.py  run.py  window.py
src/volume_wheel_control/config/: defaults.py  migrations.py  models.py  paths.py  storage.py
src/volume_wheel_control/gestures/: detector.py  gestures.py  qt_timer.py  timer.py
src/volume_wheel_control/input/: keyboard_hook.py  keys.py  raw_events.py
src/volume_wheel_control/profiles/: matchers.py  resolver.py
src/volume_wheel_control/ui/: main_window.py  theme.py  tray.py
src/volume_wheel_control/ui/dialogs/: override_dialog.py
src/volume_wheel_control/ui/editors/: action_editor.py  hotkey_editor.py  media_editor.py  run_editor.py  window_editor.py
src/volume_wheel_control/ui/pages/: about_page.py  bindings_page.py  profiles_page.py  settings_page.py
src/volume_wheel_control/windows/: autostart.py  foreground_watcher.py  window_actions.py
tests/: fakes.py  test_config_storage.py  test_gesture_detector.py  test_resolver.py
